src/components/FilesList/filesList.scss
.b-files {

    &_header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 16px 5vw 15px;
        border-bottom: 1px solid var(--line-color);

        &-title {
            font-size: clamp(25px, 1.8vw, 30px);
            font-weight: 800;
        }
    }

    .button-link--dark {

        img {
            margin-right: 10px;
        }
    }

    &_item {
        display: grid;
        grid-template: auto / 1fr repeat(2, max(11vw, 150px)) 50px;
        gap: 10px;
        align-items: center;
        padding: 20px;
        border-bottom: 1px solid var(--line-color);

        &.header {
            @media (max-width: 550px) {
                display: none;
            }
        }
 
        @media (max-width: 850px) {
            grid-template: auto / 1fr repeat(2, 110px) 40px;
        }

        @media (max-width: 700px) {
            grid-template: auto / 1fr 110px 40px;
        }

        @media (max-width: 550px) {
            grid-template: auto auto / 1fr 40px;
        }

        &.header * {
            font-size: clamp(14px, 1vw, 18px);
            color: var(--light-font);
        }
    }

    &_icon {
        display: inline-flex;
        justify-content: center;
        align-items: center;
        width: 50px;
        height: 50px;
        background-color: rgba($color: #7F56D9, $alpha: 0.3);
        border-radius: 50%;
        grid-row: 1 / 3;
        grid-column: 1;

        @media (max-width: 550px) {
            width: 40px;
            height: 40px;
        }

        img {
            width: 50%;
            height: 50%;
            object-fit: contain;
            
        }
    }

    &_name {
        display: grid;
        grid-template: auto / 65px 1fr;
        flex: 1;
        align-items: center;

        @media (max-width: 550px) {
            grid-template: auto / 50px 1fr;
        }
    }

    &_title {
        grid-row: 1;
        grid-column: 2;
    }

    &_title-size {
        grid-row: 2;
        grid-column: 2;
        color: var(--light-font);
    }

    &_size {
        color: var(--light-font);

        @media (max-width: 700px) {
            display: none;
        }
    }

    &_date {
        color: var(--light-font);

        @media (max-width: 550px) {
            grid-column: 1;
            grid-row: 2;
            padding-left: 50px;
        }
    }

    &_actions {
        position: relative;
        text-align: center;

        &:hover {

            .b-files_dropdown {
                display: flex;
                flex-direction: column;
            }

            .b-files_actions-button {
                background: url('../../../public/images/dropdown-hover.svg') no-repeat center center;
            }
        }

        &.top-position .b-files_dropdown {
            bottom: 100%;
            top: auto;
        }
    }

    &_actions-button {
        width: 30px;
        height: 30px;
        cursor: pointer;
        background: url('../../../public/images/dropdown.svg') no-repeat center center;
        border: none;
        transition: transform 0.3s;
    }

    &_dropdown {
        display: none;
        position: absolute;
        top: 100%;
        right: 0;
        box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.3);
        border: 1px solid var(--line-color);
        background-color: #ffffff;
        border-radius: 8px;
        overflow: hidden;
        z-index: 9;

        * {
            text-decoration: none;
            background: none;
            border: none;
            padding: 10px 20px;
            text-align: center;
            cursor: pointer;
            transition: 0.4s;

            &:not(:last-child) {
                border-bottom: 1px solid var(--line-color);
            }

            &:hover {
                background: var(--bright-color);
                color: #fff;
                transition: 0.4s;
            }
        }
    }

    
}

